# video-stream

./: .gitignore  LICENSE  README.md  install-avatar.sh  install-phone.sh  install-pose.sh  install.sh  path_b.md  path_c.md  path_d.md  pyproject.toml  requirements.txt
presets/: director-rules.example.json
presets/chaos/: brb-slam.json  hype.json
tests/: test_chaos.py  test_chat.py  test_director.py  test_peers.py  test_phone.py  test_replay.py  test_safety.py  test_settings.py  test_zoom.py
video_stream/: __init__.py  __main__.py  app.py  camera.py  chaos.py  chat.py  director.py  hub.py  motion.py  network.py  obs.py  overlays.py  peers.py  phone.py  pose.py  replay.py  safety.py  settings.py  setup_wizard.py
video_stream/static/css/: style.css
video_stream/static/js/: app.js  avatar.js  bus.js
video_stream/templates/: avatar.html  index.html  phone-view.html  phone.html  viewer.html
video_stream/templates/overlay/: alerts.html  chat.html  fx.html  hud.html  stinger.html  subtitles.html
