[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-stream"
version = "1.0.0"
description = "Broadcast local cameras over Wi‑Fi with copyable OBS-ready URLs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "video-stream contributors" }]
keywords = ["webcam", "mjpeg", "obs", "streaming", "camera", "wifi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "opencv-python-headless>=4.10.0",
  "numpy>=1.26.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
# Pose estimation. Note: `pip install .[pose]` will pull in the GUI OpenCV build;
# use ./install-pose.sh instead, which restores opencv-python-headless afterward.
pose = ["mediapipe>=0.10.30"]

[project.urls]
Homepage = "https://github.com/lalomorales22/video-stream"
Repository = "https://github.com/lalomorales22/video-stream"

[project.scripts]
video-stream = "video_stream.app:main"

[tool.setuptools.packages.find]
include = ["video_stream*"]

[tool.setuptools.package-data]
video_stream = ["static/**/*", "templates/**/*"]
